--- a/share.safe.html
+++ b/share.safe.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Share or Safe? - Digital Safety Game</title>
+    <title>Share or Safe? - Game Jejak DIgital</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -1465,8 +1465,8 @@ footer {
                 <span>Game Interaktif</span>
             </div>
             
-            <h2 class="gradient-text">Menjaga Privasi di Media Sosial</h2>
-            <p>Identifikasi konten digital yang aman atau berbahaya untuk dibagikan!</p>
+            <h2 class="gradient-text">Kesadaran Jejak Digital dalam Menjaga Privasi Online</h2>
+            <p>Identifikasi konten digital yang aman atau berbahaya dalam Jejal Digital </p>
         </div>
         <div class="game-container">
             <!-- Start Screen (Simplified) -->
@@ -2314,4 +2314,5 @@ footer {
         });
     </script>
 </body>
+
 </html>
