--- a/share.safe.html
+++ b/share.safe.html
@@ -1465,8 +1465,9 @@ footer {
                 <span>Game Interaktif</span>
             </div>
             
-            <h2 class="gradient-text">Kesadaran Jejak Digital dalam Menjaga Privasi Online</h2>
-            <p>Identifikasi konten digital yang aman atau berbahaya dalam Jejal Digital </p>
+            <h2 class="gradient-text">Kesadaran Jejak Digital dalam 
+                <br> Menjaga Privasi Online</h2> </br>
+            <p>Identifikasi konten digital yang aman atau berbahaya dalam Jejak Digital </p>
         </div>
         <div class="game-container">
             <!-- Start Screen (Simplified) -->
@@ -2316,3 +2317,4 @@ footer {
 </body>
 
 </html>
+
